--- a/package.json
+++ b/package.json
@@ -22,25 +22,22 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
+    "babel-eslint": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "concurrently": "^3.5.0",
-    "eslint": "^4.7.2",
+    "eslint": "^4.19.1",
+    "eslint-config-nicenice": "^1.0.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-config-standard-jsx": "^5.0.0",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "standard": "^10.0.3",
-    "standard-own": "^1.0.2",
     "uglify-js": "^3.3.11"
-  },
-  "standard-own": {
-    "eslintConfig": {
-      "configFile": "./.eslintrc.js"
-    }
   }
 }
